--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jan 10 12:06:12 CET 2021
-sdk.dir=/Users/anna/Library/Android/sdk
+#Tue Jan 12 14:18:49 EET 2021
+sdk.dir=D\:\\Apps\\Android_SDK
