--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 12 14:18:49 EET 2021
-sdk.dir=D\:\\Apps\\Android_SDK
+#Wed Jan 13 21:04:07 CET 2021
+sdk.dir=/Users/anna/Library/Android/sdk
