--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Day">
-        <activity android:name=".MyOrders"></activity>
-        <activity android:name=".OrderDetailsActivity"></activity>
-        <activity android:name=".AddPartActivity"></activity>
+        <activity android:name=".add_order_activity"></activity>
+        <activity android:name=".MyOrders" />
+        <activity android:name=".OrderDetailsActivity" />
+        <activity android:name=".AddPartActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
