--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             android:launchMode="singleTop"/>
         <activity android:name=".AddPartActivity"
             android:parentActivityName=".OrderDetailsActivity" />
+        <activity android:name=".InfoAboutOrderActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
