--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:parentActivityName=".InfoAboutOrderActivity" />
         <activity android:name=".add_order_activity" />
         <activity android:name=".DeadlineActivity" />
+        <activity android:name=".PersonalNoteActivity" />
         <activity
             android:name=".MyOrders"
             android:parentActivityName=".MainActivity" />
