--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Jan 15 04:54:45 EET 2021
-sdk.dir=D\:\\Apps\\Android_SDK
+sdk.dir=/Users/anna/Library/Android/sdk
